// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snaphot must match btn 1`] = `
<div>
  <button
    className="btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnBlue 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn-blue btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="btn-blue hover btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    hover
  </button>
  <button
    className="btn-blue focus btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    focus
  </button>
  <button
    className="btn-blue selected btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    selected
  </button>
  <button
    className="btn-blue disabled btn"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnDanger 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn-danger btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="btn-danger hover btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    hover
  </button>
  <button
    className="btn-danger focus btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    focus
  </button>
  <button
    className="btn-danger selected btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    selected
  </button>
  <button
    className="btn-danger disabled btn"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnLarge 1`] = `
<div
  className="f3 p-4"
>
  <a
    className="btn-large btn-purple mr-6 btn"
    disabled={false}
    href="#url"
    onClick={[Function]}
    role="button"
  >
    Large link button
  </a>
  <button
    className="btn-large btn-outline-blue btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Large button button
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnLink 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button Link
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnOutline 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn-outline btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="btn-outline hover btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    hover
  </button>
  <button
    className="btn-outline focus btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    focus
  </button>
  <button
    className="btn-outline selected btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    selected
  </button>
  <button
    className="btn-outline disabled btn"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnPrimary 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn-primary btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="btn-primary hover btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    hover
  </button>
  <button
    className="btn-primary focus btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    focus
  </button>
  <button
    className="btn-primary selected btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    selected
  </button>
  <button
    className="btn-primary disabled btn"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnPurple 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn-purple btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="btn-purple hover btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    hover
  </button>
  <button
    className="btn-purple focus btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    focus
  </button>
  <button
    className="btn-purple selected btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    selected
  </button>
  <button
    className="btn-purple disabled btn"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnSecondary 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn-secondary btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="btn-secondary hover btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    hover
  </button>
  <button
    className="btn-secondary focus btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    focus
  </button>
  <button
    className="btn-secondary selected btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    selected
  </button>
  <button
    className="btn-secondary disabled btn"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnSmall 1`] = `
<div
  className="f3 p-4"
>
  <a
    className="btn-sm btn-purple mr-6 btn"
    disabled={false}
    href="#url"
    onClick={[Function]}
    role="button"
  >
    Small link button
  </a>
  <button
    className="btn-sm btn-outline-blue btn"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Small button button
  </button>
</div>
`;

exports[`<Button /> Snaphot must match link 1`] = `
<div>
  <a
    className="btn"
    disabled={false}
    href="#url"
    onClick={[Function]}
    role="button"
  >
    Button
  </a>
</div>
`;
